TODAS AS PÁGINAS PRONTAS

--- a/paginas/receitas/alho.html
+++ b/paginas/receitas/alho.html
@@ -41,25 +41,29 @@
         <section class="ingredientes">
             <h2>Ingredientes</h2>
             <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
+                <li>4 xícaras (chá) de água</li>
+        <li>2 cubos de caldo de legumes</li>
+        <li>5 colheres (sopa) de manteiga</li>
+        <li>1 xícara (chá) de alho-poró picado</li>
+        <li>1 xícara (chá) de arroz carnaroli cru</li>
+        <li>½ xícara (chá) de vinho branco seco</li>
+        <li>Sal a gosto</li>
+        <li>½ xícara (chá) de queijo parmesão ralado</li>
             </ul>
         </section>
 
         <section class="preparo">
             <h2>Modo de Preparo</h2>
             <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
+                <li>Em fogo médio, ferva a água com os cubos de caldo de legumes. Reserve.</li>
+        <li>Em outra panela, aqueça 3 colheres de manteiga e refogue o alho-poró até ficar macio e transparente.</li>
+        <li>Adicione o arroz e refogue por 2 minutos.</li>
+        <li>Despeje o vinho branco e aguarde evaporar.</li>
+        <li>Adicione uma concha do caldo de legumes reservado e cozinhe em fogo baixo, mexendo até o líquido secar.</li>
+        <li>Continue adicionando o caldo aos poucos, mexendo, até o arroz estar macio e cremoso.</li>
+        <li>Tempere com sal e desligue o fogo.</li>
+        <li>Finalize misturando o restante da manteiga e o parmesão.</li>
+        <li>Sirva ainda quente.</li>
             </ol>
         </section>
     </main>
