--- a/paginas/receitas/choco.html
+++ b/paginas/receitas/choco.html
@@ -28,51 +28,70 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Bolo de Chocolate ao Rum</h1>
+    <div class="comidas">
+        <h1>Bolo de Chocolate ao Rum</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/chocolate.jpg" alt="choco">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/chocolate.jpg" alt="choco">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <h3>Massa:</h3>
+                <ul>
+                    <li>2 colheres de manteiga ou margarina sem sal</li>
+                    <li>6 ovos</li>
+                    <li>2 e ½ xícaras de açúcar</li>
+                    <li>2 e ½ xícaras de farinha de trigo</li>
+                    <li>1 e ½ xícaras de leite</li>
+                    <li>½ xícara de rum</li>
+                    <li>1 xícara de chocolate em pó</li>
+                    <li>1 colher de fermento</li>
+                </ul><br>
+                <h3>Recheio e cobertura:</h3>
+                <ul>
+                    <li>200g de manteiga fresca sem sal</li>
+                    <li>3 gemas peneiradas</li>
+                    <li>½ copo de rum</li>
+                    <li>200g de açúcar</li>
+                    <li>250g de chocolate meio-amargo em barra (derretido em banho-maria)</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <h3>Massa (preparo):</h3>
+                <ol>
+                    <li>Bata bem a manteiga com o açúcar e as gemas até formar um creme.</li>
+                    <li>Peneire juntos a farinha, o chocolate em pó e o fermento.</li>
+                    <li>Junte os ingredientes secos ao creme, alternando com o leite e o rum, misturando bem.</li>
+                    <li>Adicione as claras em neve por último, mexendo delicadamente.</li>
+                    <li>Coloque a massa em assadeira untada e enfarinhada.</li>
+                    <li>Asse em forno pré-aquecido até dourar (faça o teste do palito).</li>
+                </ol><br>
+                <h3>Recheio e cobertura (preparo):</h3>
+                <ol>
+                    <li>Bata bem a manteiga, as gemas e o açúcar até formar um creme.</li>
+                    <li>Junte o rum e o chocolate derretido (frio) aos poucos, sempre batendo.</li>
+                    <li>Recheie e cubra o bolo com esse creme.</li>
+                    <li>Decore com granulados ou raspas de chocolate a gosto.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
