--- a/paginas/receitas/falafel.html
+++ b/paginas/receitas/falafel.html
@@ -28,51 +28,58 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Hamburguer de falafel</h1>
+    <div class="comidas">
+        <h1>Hamburguer de falafel</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/falafel.jpeg" alt="falafel">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/falafel.jpeg" alt="falafel">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>150g de grão-de-bico cozido</li>
+                    <li>½ cebola ralada</li>
+                    <li>1 dente de alho picado</li>
+                    <li>2 colheres (sopa) de azeite</li>
+                    <li>Suco de 1 limão</li>
+                    <li>½ colher (sopa) de farinha de trigo</li>
+                    <li>1 colher (chá) de coentro</li>
+                    <li>1 colher (sopa) de cominho</li>
+                    <li>Sal a gosto</li>
+                    <li>Coalhada (para acompanhar)</li>
+                    <li>Pão de brioche (para servir)</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Triture o grão-de-bico com um pouco de azeite e o suco de limão até formar uma pastinha.</li>
+                    <li>Transfira para uma tigela e misture os demais ingredientes até obter uma massa homogênea.</li>
+                    <li>Modele bolinhos no formato de hambúrguer. Pincele com azeite e polvilhe um pouco de farinha para
+                        não grudar.</li>
+                    <li>Frite em uma frigideira com um fio de azeite, em fogo alto, até dourar ambos os lados.</li>
+                    <li>Corte os pães de brioche ao meio, passe manteiga e doure na chapa ou frigideira.</li>
+                    <li>Monte o lanche: espalhe coalhada nas duas metades do pão, adicione o hambúrguer e finalize com
+                        salada coleslaw (opcional).</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
