--- a/paginas/receitas/mochi.html
+++ b/paginas/receitas/mochi.html
@@ -28,51 +28,59 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Mochi Tradicional</h1>
+    <div class="comidas">
+        <h1>Mochi Tradicional</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/mochi.webp" alt="mochi">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/mochi.webp" alt="mochi">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>300g de arroz mochigome (arroz glutinoso japonês)</li>
+                    <li>300ml de água</li>
+                    <li>Amido de milho (para envolver os bolinhos)</li>
+                    <li>Corante comestível (opcional, para mochi colorido)</li>
+                    <li>Recheio doce de sua preferência (opcional)</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Lave o arroz mochigome, deixe de molho por 10 minutos e depois coloque o arroz e a água na
+                        panela.</li>
+                    <li>Ligue o fogo alto e, quando começar a ferver, misture bem o arroz, tampe a panela e abaixe para
+                        o fogo mais baixo. Cozinhe por 8 a 10 minutos.</li>
+                    <li>Desligue o fogo e deixe o arroz "cozinhar" com o vapor por mais 10 a 15 minutos com a tampa
+                        fechada.</li>
+                    <li>Transfira o arroz cozido para outro recipiente e amasse com uma colher de pau ou utensílio
+                        pesado por 3 minutos. Repita o processo 4 vezes (totalizando 12 minutos), até obter uma massa
+                        firme e grudenta.</li>
+                    <li>Polvilhe amido de milho sobre a superfície da mesa e despeje a massa sobre ela. Polvilhe também
+                        amido sobre a massa para facilitar o manuseio.</li>
+                    <li>Com as mãos enfarinhadas com amido, corte porções da massa e molde bolinhas do tamanho desejado.
+                    </li>
+                    <li>Se desejar, adicione um recheio doce no centro de cada bolinho antes de fechar.</li>
+                    <li>Sirva os mochis em temperatura ambiente.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
