--- a/paginas/receitas/palmito.html
+++ b/paginas/receitas/palmito.html
@@ -39,27 +39,39 @@
 
     <main class="conteudo-receita">
         <section class="ingredientes">
-            <h2>Ingredientes</h2>
+            <h3>Massa:</h3>
             <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
+                <li>1/2 kg de farinha de trigo</li>
+                <li>1 colher de chá de sal</li>
+                <li>1 ovo</li>
+                <li>1/2 xícara de leite</li>
+                <li>200 g de margarina (ou manteiga)</li>
+            </ul><br>
+            <h3>Recheio:</h3>
+            <ul>
+                <li>800 g de palmito picado ou em rodelas</li>
+                <li>2 quadradinhos de caldo de legumes</li>
+                <li>2 cebolas picadas</li>
+                <li>3 dentes de alho</li>
+                <li>3 tomates picados</li>
+                <li>10 azeitonas cortadas</li>
+                <li>2 latas de milho e duas de ervilha</li>
+                <li>1 pote de requeijão</li>
             </ul>
         </section>
 
         <section class="preparo">
             <h2>Modo de Preparo</h2>
             <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
+                <li>Refogar o palmito em uma panela com um cubinho de caldo de legumes e azeite, por uns 5 min.</li>
+                <li>Juntar na panela a cebola e o alho e refogar, depois coloque o tomate, refogue e desligue o fogo.</li>
+                <li>Adicione a azeitona, o milho e a ervilha, misture bem até tudo se incorporar, reserve.</li>
+                <li>Para a massa coloque a farinha e o sal e depois já adicione a margarina e misture com as mãos até tudo se incorporar.</li>
+                <li>Depois coloque o ovo e o leite juntos e misture com as mãos até virar uma massa homogênea.</li>
+                <li>Dívida a massa em duas e faça duas bolas.</li>
+                <li>Abra a massa e e cubra a forma com metade dela, depois coloque o recheio no meio e coloque algumas colheres de requeijão em cima.</li>
+                <li>Com a outra metade da massa tampe a empada.</li>
+                <li>Coloque para assar por 30 min e está pronta!</li>
             </ol>
         </section>
     </main>
