--- a/paginas/receitas/ratatu.html
+++ b/paginas/receitas/ratatu.html
@@ -28,51 +28,55 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Ratatouille</h1>
+    <div class="comidas">
+        <h1>Ratatouille</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/ratatouille.jpeg" alt="rata">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/ratatouille.jpeg" alt="rata">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>1 berinjela cortada em rodelas e depois ao meio</li>
+                    <li>1 abobrinha cortada em rodelas finas</li>
+                    <li>½ pimentão amarelo em fatias finas</li>
+                    <li>½ pimentão vermelho em fatias finas</li>
+                    <li>Molho de tomate (quantidade suficiente para cobrir o fundo do refratário)</li>
+                    <li>Tomilho a gosto (opcional)</li>
+                    <li>Sal e pimenta a gosto</li>
+                    <li>Azeite a gosto</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Prepare o molho de tomate e corte todos os vegetais conforme descrito.</li>
+                    <li>Pré-aqueça o forno a 200ºC.</li>
+                    <li>Em um refratário (aprox. 22 cm de diâmetro), espalhe o molho de tomate no fundo.</li>
+                    <li>Intercale as fatias de berinjela, abobrinha, pimentão amarelo e vermelho ao redor do refratário
+                        até preencher todo o espaço.</li>
+                    <li>Tempere com sal, pimenta e tomilho (se desejar). Regue com azeite.</li>
+                    <li>Leve ao forno por 30 a 45 minutos, até que os vegetais estejam macios (teste com um garfo).</li>
+                    <li>Sirva quente como prato principal, acompanhamento ou aperitivo com torradas.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
