--- a/paginas/receitas/tiramisu.html
+++ b/paginas/receitas/tiramisu.html
@@ -28,51 +28,55 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Tiramisù</h1>
+    <div class="comidas">
+        <h1>Tiramisù</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/tiramisu.png" alt="misu">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/tiramisu.png" alt="misu">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>1½ xícara (chá) de mascarpone (cerca de 350g)</li>
+                    <li>4 ovos</li>
+                    <li>½ xícara (chá) de açúcar</li>
+                    <li>¾ xícara (chá) de café forte coado sem açúcar</li>
+                    <li>¼ xícara (chá) de conhaque ou licor de sua preferência</li>
+                    <li>30 biscoitos champanhe caseiros</li>
+                    <li>Cacau em pó a gosto (para polvilhar)</li>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+                </ul>
+            </section>
+
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Separe as claras das gemas. Bata as gemas com metade do açúcar até formar um creme claro.
+                        Adicione o mascarpone e misture bem.</li>
+                    <li>Aqueça as claras com o restante do açúcar em banho-maria até dissolver. Bata até obter um
+                        merengue leve e incorpore delicadamente ao creme de mascarpone.</li>
+                    <li>Misture o café com o conhaque. Umedeça apenas um lado dos biscoitos e forre uma travessa com
+                        eles (lado molhado virado para cima).</li>
+                    <li>Alterne camadas de creme e biscoitos. Finalize com creme e nivele com espátula.</li>
+                    <li>Leve à geladeira por pelo menos 6 horas. Polvilhe cacau em pó na hora de servir.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
