--- a/paginas/receitas/banofe.html
+++ b/paginas/receitas/banofe.html
@@ -28,51 +28,53 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Banoffee</h1>
+    <div class="comidas">
+        <h1>Banoffee</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/banofe.jpg" alt="bano">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/banofe.jpg" alt="bano">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>400g de doce de leite firme</li>
+                    <li>10 bananas cortadas em rodelas</li>
+                    <li>400g de nata ou creme de leite fresco</li>
+                    <li>1 pacote de biscoito maisena triturado</li>
+                    <li>200g de manteiga</li>
+                    <li>1 colher (chá) de canela em pó</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Misture o biscoito triturado com a manteiga até formar uma massa lisa.</li>
+                    <li>Forre o fundo de uma forma de fundo removível e asse por 10 minutos a 180°C. Deixe esfriar.</li>
+                    <li>Espalhe o doce de leite sobre a massa fria e alise bem.</li>
+                    <li>Distribua as rodelas de banana por cima do doce de leite.</li>
+                    <li>Cubra com a nata (pode bater em ponto de chantilly, se preferir) e alise a superfície.</li>
+                    <li>Polvilhe canela por cima usando uma peneira para espalhar de forma uniforme.</li>
+                    <li>Leve à geladeira por no mínimo 3 horas antes de desenformar.</li>
+                    <li>Sirva gelada.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
