--- a/paginas/receitas/bolo.html
+++ b/paginas/receitas/bolo.html
@@ -28,51 +28,68 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Bolo de Limão Siciliano</h1>
+    <div class="comidas">
+        <h1>Bolo de Limão Siciliano</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/limao.webp" alt="limao">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/limao.webp" alt="limao">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <h3>Massa:</h3>
+                <ul>
+                    <li>2 xícaras de farinha de trigo</li>
+                    <li>½ xícara de óleo</li>
+                    <li>1 xícara de açúcar</li>
+                    <li>2 ovos</li>
+                    <li>½ xícara de suco de limão siciliano</li>
+                    <li>½ xícara de leite</li>
+                    <li>1 colher de sopa de fermento em pó</li>
+                    <li>1 colher de sopa de manteiga (para untar a forma)</li>
+                    <li>Raspas de dois limões sicilianos</li>
+                </ul><br>
+                <h3>Cobertura:</h3>
+                <ul>
+                    <li>1 caixa de leite condensado</li>
+                    <li>Suco de 2 limões sicilianos</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <h3>Cobertura (preparo):</h3>
+                <ol>
+                    <li>Misture o leite condensado com o suco dos limões em um bowl até
+                        obter um creme consistente. Cubra com plástico filme e leve à geladeira.</li>
+                </ol><br>
+                <h3>Massa (preparo):</h3>
+                <ol>
+                    <li>No liquidificador, bata os ovos, o óleo, o leite, o suco de limão e o
+                        açúcar.</li>
+                    <li>Despeje essa mistura em um bowl e acrescente a farinha de trigo, mexendo delicadamente.</li>
+                    <li>Adicione as raspas de limão e, por último, o fermento, misturando suavemente.</li>
+                    <li>Despeje a massa em uma forma untada com manteiga.</li>
+                    <li>Leve ao forno pré-aquecido a 180°C por cerca de 20 minutos ou até dourar e passar no teste do
+                        palito.</li>
+                    <li>Depois de assado e frio, cubra o bolo com o creme de limão gelado.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
