--- a/paginas/receitas/grao.html
+++ b/paginas/receitas/grao.html
@@ -28,51 +28,57 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Salada de Grão de Bico</h1>
+    <div class="comidas">
+        <h1>Salada de Grão de Bico</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/salada.jpeg" alt="grao">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/salada.jpeg" alt="grao">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>2 xícaras (chá) de grão-de-bico</li>
+                    <li>1 dente de alho (para o cozimento)</li>
+                    <li>1 colher (sobremesa) de sal (para o cozimento)</li>
+                    <li>Água suficiente para o cozimento do grão-de-bico</li>
+                    <li>½ xícara (chá) de azeitonas fatiadas</li>
+                    <li>1 cebola picada</li>
+                    <li>2 dentes de alho picados</li>
+                    <li>1 colher (chá) de sal</li>
+                    <li>1 salsão em cubos</li>
+                    <li>1 tomate em cubos</li>
+                    <li>1 pote de maionese</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Deixe o grão-de-bico de molho em água por uma noite inteira.</li>
+                    <li>No dia seguinte, escorra e coloque na panela de pressão com 1 dente de alho, 1 colher de
+                        sobremesa de sal e água suficiente para cobrir. Cozinhe por 10 minutos após pegar pressão.</li>
+                    <li>Escorra e transfira o grão-de-bico para um recipiente. Espere esfriar.</li>
+                    <li>Pique os demais ingredientes e misture com o grão-de-bico já frio.</li>
+                    <li>Adicione o pote de maionese e mexa bem até tudo estar incorporado.</li>
+                    <li>Sirva gelado como salada ou acompanhamento.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
