--- a/paginas/receitas/palha.html
+++ b/paginas/receitas/palha.html
@@ -28,51 +28,52 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Palha Italiana</h1>
+    <div class="comidas">
+        <h1>Palha Italiana</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/palha.png" alt="palha">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/palha.png" alt="palha">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>2 latas de leite condensado</li>
+                    <li>2 colheres (sopa) de margarina</li>
+                    <li>6 colheres (sopa) de chocolate em pó</li>
+                    <li>2 pacotes de biscoito de maisena (quebrados em pedaços médios)</li>
+                    <li>Açúcar a gosto para polvilhar</li>
+                </ul>
+            </section>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Em uma panela, coloque o leite condensado, a margarina e o chocolate em pó. Cozinhe até o
+                        brigadeiro desgrudar do fundo da panela.</li>
+                    <li>Deixe o brigadeiro esfriar. Transfira para uma tigela e misture os biscoitos de maisena
+                        quebrados.</li>
+                    <li>Unte uma forma com margarina e espalhe a mistura. Leve à geladeira para firmar.</li>
+                    <li>Desenforme sobre uma superfície polvilhada com açúcar. Polvilhe mais açúcar por cima.</li>
+                    <li>Molhe uma faca para facilitar e corte a palha italiana em quadradinhos.</li>
+                    <li>Sirva em seguida ou armazene em pote fechado.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
