--- a/paginas/receitas/strog.html
+++ b/paginas/receitas/strog.html
@@ -28,51 +28,54 @@
             </ul>
         </nav>
     </header>
-<div class="comidas">
-    <h1>Strogonoff vegetariano</h1>
+    <div class="comidas">
+        <h1>Strogonoff vegetariano</h1>
 
-    <div class="topo-receita">
-        <div class="box">
-            <img src="../img/strog.jpeg" alt="strog">
+        <div class="topo-receita">
+            <div class="box">
+                <img src="../img/strog.jpeg" alt="strog">
+            </div>
         </div>
-    </div>
 
-    <main class="conteudo-receita">
-        <section class="ingredientes">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li>250g de macarrão penne</li>
-                <li>1 colher de sopa de azeite</li>
-                <li>2 dentes de alho picados</li>
-                <li>1 cebola pequena picada</li>
-                <li>1 lata de tomate pelado</li>
-                <li>1/2 caixinha de creme de leite</li>
-                <li>Sal e pimenta a gosto</li>
-                <li>Queijo parmesão ralado para servir</li>
-            </ul>
-        </section>
+        <main class="conteudo-receita">
+            <section class="ingredientes">
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li>2 colheres (sopa) de manteiga</li>
+                    <li>300g de cogumelo Paris fresco em lâminas</li>
+                    <li>1 vidro de palmito picado</li>
+                    <li>Sal e pimenta-do-reino a gosto</li>
+                    <li>1 xícara (chá) de creme de leite fresco</li>
+                    <li>2 colheres (sopa) de ketchup</li>
+                    <li>1 colher (sopa) de molho inglês</li>
+                    <li>1 cebola picada</li>
 
-        <section class="preparo">
-            <h2>Modo de Preparo</h2>
-            <ol>
-                <li>Cozinhe o macarrão conforme as instruções da embalagem. Reserve.</li>
-                <li>Em uma panela, aqueça o azeite e refogue o alho e a cebola até dourar.</li>
-                <li>Adicione o tomate pelado, amasse bem e cozinhe por 10 minutos.</li>
-                <li>Adicione o creme de leite, tempere com sal e pimenta.</li>
-                <li>Misture o molho ao macarrão cozido e sirva com queijo ralado por cima.</li>
-            </ol>
-        </section>
-    </main>
+                </ul>
+            </section>
+
+            <section class="preparo">
+                <h2>Modo de Preparo</h2>
+                <ol>
+                    <li>Em uma panela, aqueça a manteiga e refogue a cebola por cerca de 3 minutos.</li>
+                    <li>Adicione os cogumelos e refogue por mais 5 minutos.</li>
+                    <li>Junte o palmito picado, tempere com sal e pimenta e refogue por mais 1 minuto.</li>
+                    <li>Acrescente o creme de leite, o ketchup e o molho inglês.</li>
+                    <li>Deixe ferver por 5 minutos e desligue o fogo.</li>
+                    <li>Sirva com arroz branco e batata palha.</li>
+                </ol>
+            </section>
+        </main>
 
         <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Contato</a>
-            </nav>
-        </div>
-    </footer>
-</div>
+            <div class="footer-content">
+                <p>&copy; 2025 By Cooked. Todos os direitos reservados.</p>
+                <nav>
+                    <a href="#">Sobre</a>
+                    <a href="#">Contato</a>
+                </nav>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
