--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -18,7 +18,7 @@
         <div class="logo">By Cooked</div>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="salgados.html">Receitas salgadas</a></li>
                 <li><a href="doces.html">Receitas doces</a></li>
                 <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
