--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -18,7 +18,7 @@
         <div class="logo">By Cooked</div>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="salgados.html">Receitas salgadas</a></li>
                 <li><a href="doces.html">Receitas doces</a></li>
                 <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
@@ -38,16 +38,15 @@
                 <h1>Cadastre-se</h1><br>
                 <form>
                     <label for="nome">Nome</label>
-                    <input type="text" id="nome_input" placeholder="Seu nome " required>
+                    <input type="text" id="nome_input" placeholder="Seu nome ">
 
                     <label for="email">E-mail</label>
-                    <input type="email" id="email_input" placeholder="nome@email.com" required>
+                    <input type="email" id="email_input" placeholder="nome@email.com">
 
                     <label for="senha">Senha</label>
-                    <input type="password" id="senha_input" placeholder="Crie uma senha" required>
-
+                    <input type="password" id="senha_input" placeholder="Crie uma senha">
                     <label for="preferencia_input">Preferência</label>
-                    <select id="preferencia_input" name="tipoReceita" required>
+                    <select id="preferencia_input" name="tipoReceita">
                         <option value="">Selecione</option>
                         <option value="salgada">Salgada</option>
                         <option value="doce">Doce</option>
@@ -55,6 +54,11 @@
                     </select>
 
                     <button onclick="cadastrar()">Cadastrar</button>
+
+                    <div class="card_erro" id="cardErro">
+                        <span id="mensagem_erro"></span>
+                    </div>
+
                 </form>
             </div>
         </div>
@@ -73,8 +77,14 @@
             senhaVar == "" ||
             preferenciaVar == ""
         ) {
-            alert("Preencha todos os campos para prosseguir!");
+            cardErro.style.display = "block";
+            mensagem_erro.innerHTML =
+                "Preencher todos os campos para continuar!";
+
+            finalizarAguardar();
             return false;
+        } else {
+            setInterval(sumirMensagem, 50000);
         }
 
         fetch("/usuarios/cadastrar", {
@@ -83,43 +93,45 @@
                 "Content-Type": "application/json",
             },
             body: JSON.stringify({
+                // crie um atributo que recebe o valor recuperado aqui
+                // Agora vá para o arquivo routes/usuario.js
                 nomeServer: nomeVar,
                 emailServer: emailVar,
                 senhaServer: senhaVar,
                 preferenciaServer: preferenciaVar
             }),
         })
-        .then(function (resposta) {
-            if (resposta.ok) {
-                alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...");
-                setTimeout(() => {
-                    window.location = "login.html";
-                }, 2000);
+            .then(function (resposta) {
+                console.log("resposta: ", resposta);
 
-                if (typeof limparFormulario === "function") {
+                if (resposta.ok) {
+                    cardErro.style.display = "block";
+
+                    mensagem_erro.innerHTML =
+                        "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+
+                    setTimeout(() => {
+                        window.location = "login.html";
+                    }, "2000");
+
                     limparFormulario();
-                }
-
-                if (typeof finalizarAguardar === "function") {
                     finalizarAguardar();
+                } else {
+                    throw "Houve um erro ao tentar realizar o cadastro!";
                 }
-            } else {
-                alert("Houve um erro ao tentar realizar o cadastro!");
-                throw "Erro no cadastro";
-            }
-        })
-        .catch(function (erro) {
-            console.error("#ERRO:", erro);
-            alert("Erro na comunicação com o servidor. Tente novamente mais tarde.");
-
-            if (typeof finalizarAguardar === "function") {
+            })
+            .catch(function (resposta) {
+                console.log(`#ERRO: ${resposta}`);
                 finalizarAguardar();
-            }
-        });
+            });
 
-        return false; 
+        return false;
     }
-</script>
 
+    function sumirMensagem() {
+        cardErro.style.display = "none";
+    }
+
+</script>
 
 </html>
