--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,7 @@
         <div class="logo">By Cooked</div>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="salgados.html">Receitas salgadas</a></li>
                 <li><a href="doces.html">Receitas doces</a></li>
                 <li><a href="vegetariana.html">Receitas vegetarianas</a></li>
@@ -28,24 +28,31 @@
             </ul>
         </nav>
     </header>
+
+
     <div class="pagina">
         <div class="container">
             <div class="image-section-login">
                 <img src="./img/img_login.jpeg" alt="Imagem culinária">
             </div>
-            <div class="login-section"> 
+            <div class="login-section">
                 <h1>Login</h1><br>
                 <form>
                     <label for="email">E-mail</label>
-                    <input type="email" id="email" placeholder="nome@email.com" required>
+                    <input type="email" id="email" placeholder="nome@email.com">
 
                     <label for="senha">Senha</label>
-                    <input type="password" id="senha" placeholder="Digite sua senha" required>
+                    <input type="password" id="senha" placeholder="Digite sua senha">
 
                     <button onclick="entrar()">Entrar</button>
                     <p class="link">Não tem uma conta? <a href="#">Cadastre-se</a></p>
+
+                    <div class="card_erro" id="cardErro">
+                        <span id="mensagem_erro"></span>
+                    </div>
                 </form>
             </div>
+
         </div>
     </div>
 </body>
@@ -54,6 +61,7 @@
 </body>
 
 <script>
+
     function cadastre() {
         window.location.href = "cadastro.html";
     }
@@ -66,7 +74,7 @@
 
         if (emailVar == "" || senhaVar == "") {
             cardErro.style.display = "block"
-            mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
+            mensagem_erro.innerHTML = "Preencha todos os campos para continuar!";
             finalizarAguardar();
             return false;
         }
@@ -100,7 +108,7 @@
                     sessionStorage.ID_USUARIO = json.id;
 
                     setTimeout(function () {
-                        window.location = "./dashboard/cards.html";
+                        window.location = "dashboard.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
@@ -121,11 +129,9 @@
 
         return false;
     }
-
     function sumirMensagem() {
         cardErro.style.display = "none"
     }
-
 </script>
 
 </html>
