--- a/public/login.html
+++ b/public/login.html
@@ -37,27 +37,24 @@
             </div>
             <div class="login-section">
                 <h1>Login</h1><br>
-                <form>
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" placeholder="nome@email.com">
 
-                    <label for="senha">Senha</label>
-                    <input type="password" id="senha" placeholder="Digite sua senha">
+                <label for="email">E-mail</label>
+                <input type="email" id="email_input" placeholder="nome@email.com">
 
-                    <button onclick="entrar()">Entrar</button>
-                    <p class="link">Não tem uma conta? <a href="#">Cadastre-se</a></p>
+                <label for="senha">Senha</label>
+                <input type="password" id="senha_input" placeholder="Digite sua senha">
 
-                    <div class="card_erro" id="cardErro">
-                        <span id="mensagem_erro"></span>
-                    </div>
-                </form>
+                <button onclick="entrar()">Entrar</button>
+                <p class="link">Não tem uma conta? <a href="#" onclick="cadastre()">Cadastre-se</a></p>
+
+                <div class="card_erro" id="cardErro">
+                    <span id="mensagem_erro"></span>
+                </div>
+
             </div>
 
         </div>
     </div>
-</body>
-
-</html>
 </body>
 
 <script>
@@ -67,19 +64,16 @@
     }
 
     function entrar() {
-        aguardar();
 
         var emailVar = email_input.value;
         var senhaVar = senha_input.value;
 
         if (emailVar == "" || senhaVar == "") {
-            cardErro.style.display = "block"
+
+            cardErro.style.display = "block";
             mensagem_erro.innerHTML = "Preencha todos os campos para continuar!";
-            finalizarAguardar();
+
             return false;
-        }
-        else {
-            setInterval(sumirMensagem, 5000)
         }
 
         console.log("FORM LOGIN: ", emailVar);
@@ -107,10 +101,8 @@
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
 
-                    setTimeout(function () {
                         window.location = "dashboard.html";
-                    }, 1000); // apenas para exibir o loading
-
+                    
                 });
 
             } else {
@@ -119,7 +111,6 @@
 
                 resposta.text().then(texto => {
                     console.error(texto);
-                    finalizarAguardar(texto);
                 });
             }
 
@@ -129,9 +120,7 @@
 
         return false;
     }
-    function sumirMensagem() {
-        cardErro.style.display = "none"
-    }
+
 </script>
 
 </html>
