--- a/public/receitas/strog.html
+++ b/public/receitas/strog.html
@@ -49,8 +49,11 @@
                     substituindo a carne por ingredientes de origem vegetal, como os cogumelos, mantendo todas as
                     caracteristicas e aquele sabor especial.
                 </p><br>
-                <label for="favoritar" class="tempo-preparo">❤️ </label>
-                <button class="botaofavorito" onclick="favoritar()">Favoritar receita</button>
+                
+                 <button class="botao-favorito" data-receita-id="17" data-favoritado="false">
+                    ❤️ Favoritar
+                </button>
+
             </div>
         </div>
 
